--- a/Credit Card Fraud Detection.ipynb
+++ b/Credit Card Fraud Detection.ipynb
@@ -53,6 +53,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
     "%pylab inline\n",
